// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`widgets/NotificationBox should match snapshot with close with tooltip 1`] = `
<div>
  <div
    class="NotificationBox"
  >
    <div
      class="content"
    >
      <p
        class="title"
      >
        title
      </p>
      CONTENT
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="tooltip"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`widgets/NotificationBox should match snapshot with close without tooltip 1`] = `
<div>
  <div
    class="NotificationBox"
  >
    <div
      class="content"
    >
      <p
        class="title"
      >
        title
      </p>
      CONTENT
    </div>
    <button
      class="IconButton"
      type="button"
    >
      <i
        class="CompassIcon icon-close CloseIcon"
      />
    </button>
  </div>
</div>
`;

exports[`widgets/NotificationBox should match snapshot with icon 1`] = `
<div>
  <div
    class="NotificationBox"
  >
    <div
      class="NotificationBox__icon"
    >
      ICON
    </div>
    <div
      class="content"
    >
      <p
        class="title"
      >
        title
      </p>
      CONTENT
    </div>
  </div>
</div>
`;

exports[`widgets/NotificationBox should match snapshot with icon and close with tooltip 1`] = `
<div>
  <div
    class="NotificationBox"
  >
    <div
      class="NotificationBox__icon"
    >
      ICON
    </div>
    <div
      class="content"
    >
      <p
        class="title"
      >
        title
      </p>
      CONTENT
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="tooltip"
    >
      <button
        class="IconButton"
        type="button"
      >
        <i
          class="CompassIcon icon-close CloseIcon"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`widgets/NotificationBox should match snapshot without icon and close 1`] = `
<div>
  <div
    class="NotificationBox"
  >
    <div
      class="content"
    >
      <p
        class="title"
      >
        title
      </p>
      CONTENT
    </div>
  </div>
</div>
`;
